shopping cart desc and signing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,22 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
+    }
+
+    signingConfigs {
+        release {
+            storeFile file('C:/MAD_MP/mad_shop.keystore')
+            storePassword 'Skaldro!!@100'
+            keyAlias 'mad_mp'
+            keyPassword 'Skaldro!!@100'
+        }
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+            // other configurations...
+        }
     }
 }
 
@@ -52,6 +68,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.google.firebase:firebase-firestore:24.8.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
